@@ -2712,22 +2712,24 @@ typedef struct _TV_KEYDOWN {
 	WORD wVKey;
 	UINT flags;
 } TV_KEYDOWN;
-typedef struct _TC_ITEMHEADERA {
+typedef struct tagTCITEMHEADERA {
 	UINT mask;
 	UINT lpReserved1;
 	UINT lpReserved2;
 	LPSTR pszText;
 	int cchTextMax;
 	int iImage;
-} TC_ITEMHEADERA;
-typedef struct _TC_ITEMHEADERW {
+} TCITEMHEADERA, *LPTCITEMHEADERA;
+#define TC_ITEMHEADERA TCITEMHEADERA
+typedef struct tagTCITEMHEADERW {
 	UINT mask;
 	UINT lpReserved1;
 	UINT lpReserved2;
 	LPWSTR pszText;
 	int cchTextMax;
 	int iImage;
-} TC_ITEMHEADERW;
+} TCITEMHEADERW, *LPTCITEMHEADERW;
+#define TC_ITEMHEADERW TCITEMHEADERW
 typedef struct tagTCITEMA {
 	UINT mask;
 #if (_WIN32_IE >= 0x0300)
@@ -3530,6 +3532,8 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TVN_BEGINLABELEDIT TVN_BEGINLABELEDITW
 #define TVN_ENDLABELEDIT TVN_ENDLABELEDITW
 #define TC_ITEMHEADER TC_ITEMHEADERW
+#define TCITEMHEADER TCITEMHEADERW
+#define LPTCITEMHEADER LPTCITEMHEADERW
 #define TC_ITEM TC_ITEMW
 #define TCITEM TCITEMW
 #define LPTCITEM LPTCITEMW
@@ -3706,6 +3710,8 @@ typedef NMHDDISPINFOW NMHDDISPINFO, *LPNMHDDISPINFO;
 #define TVN_BEGINLABELEDIT TVN_BEGINLABELEDITA
 #define TVN_ENDLABELEDIT TVN_ENDLABELEDITA
 #define TC_ITEMHEADER TC_ITEMHEADERA
+#define TCITEMHEADER TCITEMHEADERA
+#define LPTCITEMHEADER LPTCITEMHEADERA
 #define TC_ITEM TC_ITEMA
 #define TCITEM TCITEMA
 #define LPTCITEM LPTCITEMA
